k8s/apps/test2/helmrelease-podinfo-linkerd.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: header
  namespace: test2
spec:
  headers:
    customRequestHeaders:
      l5d-dst-override: "podinfo-linkerd.test2.svc.cluster.local:9898"
