k8s/apps/test2/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test2
  annotations:
    linkerd.io/inject: enabled #inject linkerd
    config.linkerd.io/default-inbound-policy: deny #Set default policy for namespace
    config.linkerd.io/proxy-await: enabled #Wait for proxy to start serving traffic
  labels:
    eboNamespace: True
