k8s/apps/test2/linkerd-policy.yaml
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: svc-acc-policy
  namespace: test2
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: linkerd-podinfo
  requiredAuthenticationRefs:
    - name: authors-get-authn
      kind: MeshTLSAuthentication
      group: policy.linkerd.io

#---
#apiVersion: policy.linkerd.io/v1alpha1
#kind: AuthorizationPolicy
#metadata:
#  name: svc-acc-policy
#  namespace: test2
#spec:
#  targetRef:
#    group: policy.linkerd.io
#    kind: Server
#    name: linkerd-podinfo
#  requiredAuthenticationRefs:
#    - name: traefik-linkerd
#      kind: ServiceAccount
#      namespace: test-ingress
